syntax = "proto3";
package ventus.client;

import "auth/auth.client.proto";
import "common/common.client.proto";
import "game/chat/chat.client.proto";
import "game/movement/movement.client.proto";
import "game/session/session.client.proto";

message ClientMessage {
  oneof payload {
    protos.client.auth.LoginRequest login_request = 1;
    ventus.client.common.MessagePing message_ping = 2;
    protos.game.client.chat.ChatSend chat_send = 3;
    protos.game.client.chat.ChatCommand chat_command = 4;
    protos.game.client.movement.PlayerInput player_input = 5;
    protos.game.client.session.PlayerJoin player_join = 6;
    protos.game.client.session.PlayerExit player_exit = 7;
  }
}