syntax = "proto3";

package protos.game.movement;

message ClientMessageMovement {
  oneof message_type {
    PlayerInput player_input = 1;
  }
}

message PlayerInput {
  repeated uint32 keys = 1;  
}


message ServerMessageMovement {
  oneof message_type {
    PlayerPosition player_position = 1;
  }
}



message PlayerPosition {
  int32 player_id = 1;      // ID del jugador que se movió
  int32 x = 2;              // Nueva posición X
  int32 y = 3;              // Nueva posición Y
  int64 timestamp = 4;      // Timestamp del servidor para el movimiento
}

